# zero2prod

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
config/: configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
