[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Joe Pride <>"]
edition = "2024"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }

config = "0.13"

actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]